--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&family=Plus+Jakarta+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Plus+Jakarta+Sans:wght@400;700&display=swap');
 
 .head {
 	font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 .content {
-	font-family: 'Nunito Sans', sans-serif;
+	font-family: 'Nunito', sans-serif;
 }
