--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,5 +18,5 @@ bodu {
 		rgb(35, 43, 54) 100%
 	);
 
-	@apply fixed w-full h-screen flex flex-col items-center justify-center bg-slate-800;
+	@apply fixed w-full min-h-screen flex flex-col items-center justify-center bg-slate-800;
 }
