--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html,
-bodu {
+body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -23,4 +23,20 @@ bodu {
 	);
 
 	@apply fixed -z-10 w-full min-h-screen top-0 left-0;
+}
+
+.container {
+	@apply max-w-5xl flex md:flex-row flex-col md:gap-16 gap-8 items-center justify-center;
+}
+
+.bio {
+	@apply flex flex-col w-full md:p-0 p-4;
+
+	h1 {
+		@apply text-3xl text-niceorange font-bold;
+	}
+
+	hr {
+		@apply rounded border-niceyellow;
+	}
 }
