--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,7 +22,7 @@ body {
 		rgb(35, 43, 54) 100%
 	);
 
-	@apply fixed -z-10 w-full min-h-screen top-0 left-0;
+	@apply fixed -z-10 w-full h-screen top-0 left-0;
 }
 
 .container {
